@@ -17,11 +17,15 @@
 package org.eblocker.server.http.service;
 
 import com.google.inject.Inject;
+import org.eblocker.crypto.CryptoException;
+import org.eblocker.crypto.CryptoService;
+import org.eblocker.crypto.CryptoServiceFactory;
 import org.eblocker.server.common.data.DataSource;
 import org.eblocker.server.http.backup.AppModulesBackupProvider;
 import org.eblocker.server.http.backup.BackupProvider;
 import org.eblocker.server.http.backup.CorruptedBackupException;
 import org.eblocker.server.http.backup.DevicesBackupProvider;
+import org.eblocker.server.http.backup.HttpsKeysBackupProvider;
 import org.eblocker.server.http.backup.TorConfigBackupProvider;
 import org.eblocker.server.http.backup.UnsupportedBackupVersionException;
 import org.slf4j.Logger;
@@ -30,8 +34,6 @@ import org.slf4j.LoggerFactory;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -46,13 +48,17 @@ import java.util.jar.Manifest;
  * The configuration version is written to the JAR's manifest file.
  */
 public class ConfigurationBackupService {
-    private static final int OLD_VERSION_1_ONLY_APP_MODULES = 1;
-    private static final int OLD_VERSION_2_APP_MODULES_AND_DEVICES = 2;
-    private static final int OLD_VERSION_3_APP_MODULES_DEVICES_TOR = 3;
-    private static final int CURRENT_VERSION = 3;
+    private static final int VERSION_1_ONLY_APP_MODULES = 1;
+    private static final int VERSION_2_APP_MODULES_AND_DEVICES = 2;
+    private static final int VERSION_3_APP_MODULES_DEVICES_TOR = 3;
+    private static final int VERSION_4_WITH_KEYS = 4;
+    private static final int CURRENT_VERSION = 4;
+    private static final byte[] salt = {-58, -73, 41, -28, 37, 23, -61, 93, 47, -57, -45, 23, -77, 97, 102, 49};
     static final String CURRENT_VERSION_KEY = "eBlocker-Backup-Version";
     static final String CURRENT_SCHEMA_VERSION = "Schema-Version";
     static final String FALLBACK_SCHEMA_VERSION = "0";
+    static final String PASSWORD_REQUIRED = "Password-Required";
+    static final String PASSWORD_REQUIRED_DEFAULT = "false";
 
     private Map<Integer, List<BackupProvider>> versionizedBackupProviders;
     private static final Logger LOG = LoggerFactory.getLogger(ConfigurationBackupService.class);
@@ -60,23 +66,26 @@ public class ConfigurationBackupService {
 
     @Inject
     public ConfigurationBackupService(DataSource dataSource, AppModulesBackupProvider appModulesBackupProvider,
-                                      DevicesBackupProvider devicesBackupProvider, TorConfigBackupProvider torConfigBackupProvider) {
+                                      DevicesBackupProvider devicesBackupProvider, TorConfigBackupProvider torConfigBackupProvider,
+                                      HttpsKeysBackupProvider httpsKeysBackupProvider) {
         this(dataSource);
 
-        versionizedBackupProviders.put(OLD_VERSION_1_ONLY_APP_MODULES,
-                new ArrayList<BackupProvider>(Arrays.asList(appModulesBackupProvider)));
+        versionizedBackupProviders.put(VERSION_1_ONLY_APP_MODULES,
+                List.of(appModulesBackupProvider));
 
-        versionizedBackupProviders.put(OLD_VERSION_2_APP_MODULES_AND_DEVICES,
-                new ArrayList<BackupProvider>(Arrays.asList(appModulesBackupProvider, devicesBackupProvider)));
+        versionizedBackupProviders.put(VERSION_2_APP_MODULES_AND_DEVICES,
+                List.of(appModulesBackupProvider, devicesBackupProvider));
 
-        versionizedBackupProviders.put(OLD_VERSION_3_APP_MODULES_DEVICES_TOR,
-                new ArrayList<BackupProvider>(
-                        Arrays.asList(appModulesBackupProvider, devicesBackupProvider, torConfigBackupProvider)));
+        versionizedBackupProviders.put(VERSION_3_APP_MODULES_DEVICES_TOR,
+                List.of(appModulesBackupProvider, devicesBackupProvider, torConfigBackupProvider));
+
+        versionizedBackupProviders.put(VERSION_4_WITH_KEYS,
+                List.of(httpsKeysBackupProvider, appModulesBackupProvider, devicesBackupProvider, torConfigBackupProvider)); // fail early if the password is wrong!
     }
 
     public ConfigurationBackupService(DataSource dataSource, BackupProvider backupProvider) {
         this(dataSource);
-        versionizedBackupProviders.put(CURRENT_VERSION, new ArrayList<BackupProvider>(Arrays.asList(backupProvider)));
+        versionizedBackupProviders.put(CURRENT_VERSION, List.of(backupProvider));
     }
 
     public ConfigurationBackupService(DataSource dataSource) {
@@ -85,37 +94,122 @@ public class ConfigurationBackupService {
     }
 
     public void exportConfiguration(OutputStream outputStream) throws IOException {
+        exportConfiguration(outputStream, null);
+    }
+
+    /**
+     * Exports the configuration to the given OutputStream. The user can provide a password in order to
+     * export private keys.
+     * @param outputStream
+     * @param password
+     * @throws IOException
+     */
+    public void exportConfiguration(OutputStream outputStream, String password) throws IOException {
         Manifest manifest = new Manifest();
-        addMainAttributes(manifest.getMainAttributes());
+        BackupAttributes attribs = getBackupAttributes(password != null);
+        attribs.addToAttributes(manifest.getMainAttributes());
+
+        CryptoService cryptoService = createCryptoService(password);
 
         try (JarOutputStream jarStream = new JarOutputStream(outputStream, manifest)) {
             for (BackupProvider provider : versionizedBackupProviders.get(CURRENT_VERSION)) {
-                provider.exportConfiguration(jarStream);
+                provider.exportConfiguration(jarStream, cryptoService);
             }
         }
     }
 
-    public void importConfiguration(InputStream inputStream) throws IOException {
+    /**
+     * Reads the manifest from the given InputStream and returns whether a password is required
+     * to read the contained private keys
+     * @param inputStream
+     * @return
+     * @throws IOException
+     */
+    public boolean requiresPassword(InputStream inputStream) throws IOException {
         try (JarInputStream jarStream = new JarInputStream(inputStream)) {
             Manifest manifest = jarStream.getManifest();
             if (manifest == null) {
                 throw new CorruptedBackupException("Missing manifest file");
             }
-            int version = Integer.parseInt(manifest.getMainAttributes().getValue(CURRENT_VERSION_KEY));
-            if (!versionizedBackupProviders.containsKey(version)) {
-                throw new UnsupportedBackupVersionException(version);
+            BackupAttributes attribs = new BackupAttributes(manifest.getMainAttributes());
+            return attribs.passwordRequired;
+        }
+    }
+
+    public void importConfiguration(InputStream inputStream) throws IOException {
+        importConfiguration(inputStream, null);
+    }
+
+    /**
+     * Imports the configuration from the given InputStream. If the user has provided a password,
+     * private keys are imported.
+     * @param inputStream
+     * @param password
+     * @throws IOException
+     */
+    public void importConfiguration(InputStream inputStream, String password) throws IOException {
+        try (JarInputStream jarStream = new JarInputStream(inputStream)) {
+            Manifest manifest = jarStream.getManifest();
+            if (manifest == null) {
+                throw new CorruptedBackupException("Missing manifest file");
             }
-            int schemaVersion = Integer.parseInt((String)
-                    manifest.getMainAttributes().getOrDefault(CURRENT_SCHEMA_VERSION, FALLBACK_SCHEMA_VERSION));
-            for (BackupProvider provider : versionizedBackupProviders.get(version)) {
-                provider.importConfiguration(jarStream, schemaVersion);
+            BackupAttributes attribs = new BackupAttributes(manifest.getMainAttributes());
+
+            CryptoService cryptoService = createCryptoService(password);
+
+            for (BackupProvider provider : versionizedBackupProviders.get(attribs.version)) {
+                provider.importConfiguration(jarStream, cryptoService, attribs.schemaVersion);
             }
         }
     }
 
-    void addMainAttributes(Attributes attributes) {
-        attributes.put(Attributes.Name.MANIFEST_VERSION, "1.0");
-        attributes.putValue(CURRENT_VERSION_KEY, Integer.toString(CURRENT_VERSION));
-        attributes.putValue(CURRENT_SCHEMA_VERSION, dataSource.getVersion());
+    CryptoService createCryptoService(String password) throws IOException {
+        if (password == null) {
+            return null;
+        }
+        try {
+            return CryptoServiceFactory.getInstance().setSaltedPassword(password.toCharArray(), salt).build();
+        } catch (Exception e) {
+            LOG.error("Could not create CryptoService");
+            throw new IOException("Could not create CryptoService", e);
+        }
+    }
+
+    BackupAttributes getBackupAttributes(boolean passwordRequired) {
+        return new BackupAttributes(CURRENT_VERSION, Integer.parseInt(dataSource.getVersion()), passwordRequired);
+
+    }
+
+    public class BackupAttributes {
+        private int version;
+        private int schemaVersion;
+        private boolean passwordRequired = false;
+
+        public BackupAttributes(int version, int schemaVersion, boolean passwordRequired) {
+            this.version = version;
+            this.schemaVersion = schemaVersion;
+            this.passwordRequired = passwordRequired;
+        }
+
+        private BackupAttributes(Attributes attributes) {
+            version = Integer.parseInt(attributes.getValue(CURRENT_VERSION_KEY));
+            if (!versionizedBackupProviders.containsKey(version)) {
+                throw new UnsupportedBackupVersionException(version);
+            }
+            schemaVersion = Integer.parseInt(getOrDefault(attributes, CURRENT_SCHEMA_VERSION, FALLBACK_SCHEMA_VERSION));
+            passwordRequired = Boolean.parseBoolean(getOrDefault(attributes, PASSWORD_REQUIRED, PASSWORD_REQUIRED_DEFAULT));
+        }
+
+        private String getOrDefault(Attributes attributes, String key, String defaultValue) {
+            String value = attributes.getValue(key);
+            return value != null ? value : defaultValue;
+        }
+
+        private void addToAttributes(Attributes attributes) {
+            attributes.put(Attributes.Name.MANIFEST_VERSION, "1.0");
+            attributes.putValue(CURRENT_VERSION_KEY, String.valueOf(version));
+            attributes.putValue(CURRENT_SCHEMA_VERSION, String.valueOf(schemaVersion));
+            attributes.putValue(PASSWORD_REQUIRED, String.valueOf(passwordRequired));
+        }
     }
 }
